[project]
name = "spleeter"
version = "2.4.2"
description = "The Deezer source separation library with pretrained models based on tensorflow."
authors = [
    {name = "Deezer Research", email = "spleeter@deezer.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.9,<3.12"
classifiers = [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Artistic Software",
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = [
    "ffmpeg-python>=0.2.0",
    "httpx[http2]>=0.19.0",
    "typer>=0.3.2",
    "pandas>=1.3.0",
    "norbert>=0.2.1,<0.3.0",
    "numpy<2.0.0",
    # TensorFlow 1.15.x: maintains tf.estimator support
    "tensorflow>=1.15.0,<2.0.0; platform_machine != 'arm64' or platform_system != 'Darwin'",
    "tensorflow>=1.15.0,<2.0.0; platform_machine == 'arm64' and platform_system == 'Darwin'",
    "tensorflow-io-gcs-filesystem>=0.24.0,<0.32.0",
]

[project.optional-dependencies]
evaluation = ["musdb>=0.4.0", "museval>=0.4.0"]
dev = [
    "pytest>=6.2.1",
    "isort>=5.7.0",
    "black>=21.7b0",
    "mypy>=0.790",
    "flake8>=5.0.0",
    "pytest-forked>=1.3.0",
]

[project.scripts]
spleeter = "spleeter.__main__:entrypoint"

[project.urls]
Homepage = "https://github.com/deezer/spleeter"
Repository = "https://github.com/deezer/spleeter"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "-W ignore::FutureWarning -W ignore::DeprecationWarning -vv --forked"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
